// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageWrapper generates commonjs source 1`] = `
"var AdaptiveImage = require(\\"../../node_modules/@th3rdwave/web-image-loader/lib/commonjs/AdaptiveImage\\").AdaptiveImage;

module.exports = new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;

exports[`ImageWrapper generates es modules source 1`] = `
"import {AdaptiveImage} from \\"../../node_modules/@th3rdwave/web-image-loader/lib/commonjs/AdaptiveImage\\";

export default new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;

exports[`ImageWrapper handles multiple sources 1`] = `
"import {AdaptiveImage} from \\"../../node_modules/@th3rdwave/web-image-loader/lib/commonjs/AdaptiveImage\\";

export default new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.webp\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.webp\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.webp\\" + \\" 3x\\",
      type: \\"image/webp\\"
    },
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;
